# icrwl

./: .gitignore  README.md  TASK.md  pyproject.toml
crawler/crawler/: settings.py
crawler/crawler/spiders/: config.py  global.py  page.py
