[tool.poetry]
name = "interview_crawler"
version = "0.1.0"
description = ""
authors = ["Mateusz <mkubasz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
selenium = "4.0.0"
Scrapy = "2.5.1"
dataclasses-json = "0.5.6"
tldextract = "3.1.2"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
